--- a/css/doodlerstyle.css
+++ b/css/doodlerstyle.css
@@ -24,4 +24,31 @@
 	  position: absolute;
 	  top: 300px;
 	  left: 300px;
+	  width: 110px;
+	  text-align: center;
   }
+  
+  .error {
+    width: 100%;
+    background-color: red;
+	left:0px; 
+	top:0px;
+	font-size: 40px;
+	font-weight: bold;
+	text-align: center;
+    position: absolute;
+    animation-name: example;
+    animation-duration: 6s;
+}
+
+@keyframes example {
+    0%  {background-color:red; height: 0px; opacity:0;}
+	30% {background-color:red; height: 50px; opacity:1;}
+	80% {background-color:red; height: 50px; opacity:1;}
+	100% {background-color:red; height: 0px; opacity:0;}
+}
+
+	body {
+		overflow: hidden;
+		background-image: url("/images/background.jpg");
+	}
