--- a/css/style.css
+++ b/css/style.css
@@ -89,12 +89,12 @@
  #messages {overflow: scroll; overflow-x: hidden;}
  
  .chat {
+	 width: 100%;
+	 height: 5%;
+	 background-color: #eab693;
 	 position: absolute;
 	 bottom: 0;
 	 z-index: 8;
-	 width: 33%;
-	 height: 20px;
-	 background-color: red;
  }
  
  .chat:focus {
