--- a/css/style.css
+++ b/css/style.css
@@ -73,10 +73,21 @@
 
  body, html {
 	overflow: hidden;
-	background-image: url("/images/background.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+	position: fixed;
+	width: 100%;
 	height: 100%;
+ }
+ 
+ .game {
+	background-image: url("/images/background.jpg");
+	background-repeat: no-repeat;
+	margin: auto;
+	position: relative;
+	background-size: cover;
+	height: 768px;
+	width: 1366px;
+	overflow: hidden;
+	border: 2px solid #845415;
  }
  
  a {
