--- a/css/style.css
+++ b/css/style.css
@@ -114,9 +114,9 @@
 	 font-family: Arial, Helvetica, sans-serif;
  }
  
- #messages {position:relative; width: 100%; height: 85%; margin: 0; padding: 0; padding-bottom: 20px;}
- #messages li { padding: 5px 10px; }
- #messages li:nth-child(odd) { background: #86bfd2; }
+ #messages {position:relative; width: 100%; height: 100%; margin: 0; padding: 0; padding-bottom: 20px;}
+ #messages li { padding: 5px 10px; background: #bc8a25;}
+ #messages li:nth-child(odd) { background: #f9b939; }
  #messages {overflow: scroll; overflow-x: hidden;}
  
  .chat {
@@ -128,8 +128,29 @@
 	 z-index: 8;
  }
  
+ .chatlog {
+	 top: 70%;
+	 height: 25%;
+	 width: 33%;
+	 z-index: 8;
+	 display: none;
+	 border-radius: 20px;
+	 position: relative;
+	 border: 2px solid #4C3C1B;
+	 background-color: #845415;
+	 overflow: hidden;
+ }
+ 
  .chat:focus {
 	 height: 25px:
+ }
+ 
+ .chatlog-button {
+	position: absolute; 
+	text-align: center; 
+	left: 33%; 
+	top: 17%; 
+	height: 71%;
  }
  
  .chat-input {
