--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@
  }
  
  .game {
-	background-image: url("/images/background.jpg");
+	background-image: url("/images/mars.jpg");
 	background-repeat: no-repeat;
 	margin: auto;
 	position: relative;
