--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,11 @@
 	  left: 300px;
 	  margin: 0;
 	  text-align: center;
+      -moz-user-select: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      -o-user-select: none;
   }
   
   .button {
@@ -46,6 +51,11 @@
 	  position: absolute;
 	  top: 0px;
 	  left: 0px;
+      -moz-user-select: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      -o-user-select: none;
   }
   
   .muteButton {
@@ -108,6 +118,11 @@
 	width: 1366px;
 	overflow: hidden;
 	border: 2px solid #845415;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -o-user-select: none;
  }
  
  a {
