--- a/css/style.css
+++ b/css/style.css
@@ -1,87 +1,87 @@
-  .modal {
-	display: inline-block; 
-	position: fixed;
-	z-index: 9;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	overflow: auto;
-	background-color: rgb(0,0,0);
-	background-color: rgba(0,0,0,0.8);
-  }
+.modal {
+    display: inline-block; 
+    position: fixed;
+    z-index: 9;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.8);
+}
 
-  .modal-content {
-	background-color: #eab693;
-	margin: 15% auto; /* 15% from the top and centered */
-	padding: 20px;
-	border: 1px solid #888;
-	width: 40%;
-	height: 10%;
-  }
-  
-  .player {
-	  position: absolute;
-	  z-index: 3;
-	  top: 50%;
-	  left: 300px;
-	  margin: 0;
-	  text-align: center;
-      -moz-user-select: none;
-      -webkit-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-      -o-user-select: none;
-  }
-  
-  .button {
-	  font-size: medium;
-	  width: 45%;
-  }
-  
-  .object-bellow-player {
-	  z-index: 2;
-  }
-  
-  .object-above-player {
-	  z-index: 4;
-  }
-  
-  .object {
-	  position: absolute;
-	  top: 0px;
-	  left: 0px;
-      -moz-user-select: none;
-      -webkit-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-      -o-user-select: none;
-  }
-  
-  .muteButton {
-	  float: right;
-	  position: fixed;
-	  margin: 10px;
-	  z-index: 8;
-  }
-  
-  .muteButton:hover {
-	  float: right;
-	  position: absolute;
-	  width: 40px;
-	  height: 40px;
-	  margin: 6px;
-  }
-  
-  .error {
-	z-index: 10;
+.modal-content {
+    background-color: #eab693;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40%;
+    height: 10%;
+}
+
+.player {
+    position: absolute;
+    z-index: 3;
+    top: 50%;
+    left: 300px;
+    margin: 0;
+    text-align: center;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -o-user-select: none;
+}
+
+.button {
+    font-size: medium;
+    width: 45%;
+}
+
+.object-bellow-player {
+    z-index: 2;
+}
+
+.object-above-player {
+    z-index: 4;
+}
+
+.object {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -o-user-select: none;
+}
+
+.muteButton {
+    float: right;
+    position: fixed;
+    margin: 10px;
+    z-index: 8;
+}
+
+.muteButton:hover {
+    float: right;
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    margin: 6px;
+}
+
+.error {
+    z-index: 10;
     width: 100%;
     background-color: red;
-	left:0px; 
-	top:0px;
-	font-size: 40px;
-	font-weight: bold;
-	text-align: center;
+    left:0px; 
+    top:0px;
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
     position: absolute;
     animation-name: errorfade;
     animation-duration: 6s;
@@ -89,144 +89,152 @@
 
 @keyframes errorfade {
     0%  {background-color:red; height: 0px; opacity:0;}
-	30% {background-color:red; height: 50px; opacity:1;}
-	80% {background-color:red; height: 50px; opacity:1;}
-	100% {background-color:red; height: 0px; opacity:0;}
+    30% {background-color:red; height: 50px; opacity:1;}
+    80% {background-color:red; height: 50px; opacity:1;}
+    100% {background-color:red; height: 0px; opacity:0;}
 }
 
 @keyframes bubblefade {
     0%  {opacity:0;}
-	20% {opacity:1;}
-	85% {opacity:1;}
-	100% {opacity:0;}
+    20% {opacity:1;}
+    85% {opacity:1;}
+    100% {opacity:0;}
 }
 
- body, html {
-	overflow: hidden;
-	position: fixed;
-	width: 100%;
-	height: 100%;
- }
- 
- .game {
-	background-image: url("/images/mars.jpg");
-	background-repeat: no-repeat;
-	margin: auto;
-	position: relative;
-	background-size: cover;
-	height: 768px;
-	width: 1366px;
-	overflow: hidden;
-	border: 2px solid #845415;
+body, html {
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
+
+.game {
+    background-image: url("/images/mars.jpg");
+    background-repeat: no-repeat;
+    margin: auto;
+    position: relative;
+    background-size: cover;
+    height: 768px;
+    width: 1366px;
+    overflow: hidden;
+    border: 2px solid #845415;
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
     -o-user-select: none;
- }
- 
- a {
-	 font-family: Arial, Helvetica, sans-serif;
- }
- 
- #messages {position:relative; width: 100%; height: 100%; margin: 0; padding: 0; padding-bottom: 20px;}
- #messages li { padding: 5px 10px; background: #bc8a25;}
- #messages li:nth-child(odd) { background: #f9b939; }
- #messages {overflow: scroll; overflow-x: hidden;}
- 
- .chat {
-	 width: 100%;
-	 height: 5%;
-	 background-color: #eab693;
-	 position: absolute;
-	 bottom: 0;
-	 z-index: 8;
- }
- 
- .chatlog {
-	 top: 70%;
-	 height: 25%;
-	 width: 33%;
-	 z-index: 8;
-	 display: none;
-	 border-radius: 20px;
-	 position: relative;
-	 border: 2px solid #4C3C1B;
-	 background-color: #845415;
-	 overflow: hidden;
- }
- 
- .chat:focus {
-	 height: 25px:
- }
- 
- .chatlog-button {
-	position: absolute; 
-	text-align: center; 
-	left: 33%; 
-	top: 17%; 
-	height: 71%;
- }
- 
- .chat-input {
-	 height: 20px;
- }
- 
- .chat-messages {
-	 
- }
- 
- figcaption {
-	 font-family: "Arial Black", Gadget, sans-serif;
-	 color: white;
-     text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
- }
- 
- .tri-right.border.btm-left-in:before {
-	content: ' ';
-	position: absolute;
-	width: 0;
-	height: 0;
-	left: 30px;
-	right: auto;
-	top: auto;
-	bottom: 40px;
-	border-style: outset;
-	border: 20px solid;
-	border-color: #666 transparent transparent #666;
+}
+
+a {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#messages {
+    position:relative; width: 100%; height: 100%; margin: 0; padding: 0; padding-bottom: 20px;
+}
+#messages li {
+    padding: 5px 10px; background: #bc8a25;
+}
+#messages li:nth-child(odd) {
+    background: #f9b939;
+}
+#messages {
+    overflow: scroll; overflow-x: hidden;
+}
+
+.chat {
+    width: 100%;
+    height: 5%;
+    background-color: #eab693;
+    position: absolute;
+    bottom: 0;
+    z-index: 8;
+}
+
+.chatlog {
+    top: 70%;
+    height: 25%;
+    width: 33%;
+    z-index: 8;
+    display: none;
+    border-radius: 20px;
+    position: relative;
+    border: 2px solid #4C3C1B;
+    background-color: #845415;
+    overflow: hidden;
+}
+
+.chat:focus {
+    height: 25px:
+}
+
+.chatlog-button {
+    position: absolute; 
+    text-align: center; 
+    left: 33%; 
+    top: 17%; 
+    height: 71%;
+}
+
+.chat-input {
+    height: 20px;
+}
+
+.chat-messages {
+
+}
+
+figcaption {
+    font-family: "Arial Black", Gadget, sans-serif;
+    color: white;
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+}
+
+.tri-right.border.btm-left-in:before {
+    content: ' ';
+    position: absolute;
+    width: 0;
+    height: 0;
+    left: 30px;
+    right: auto;
+    top: auto;
+    bottom: 40px;
+    border-style: outset;
+    border: 20px solid;
+    border-color: #666 transparent transparent #666;
 }
 
 .tri-right.btm-left-in:after{
-	content: ' ';
-	position: absolute;
-	width: 0;
-	height: 0;
-	left: 38px;
-	right: auto;
-	top: auto;
-	bottom: -20px;
-	border: 12px solid;
-	border-style: outset;
-	border-color: #EEEEEE transparent transparent #EEEEEE;
+    content: ' ';
+    position: absolute;
+    width: 0;
+    height: 0;
+    left: 38px;
+    right: auto;
+    top: auto;
+    bottom: -20px;
+    border: 12px solid;
+    border-style: outset;
+    border-color: #EEEEEE transparent transparent #EEEEEE;
 }
- 
- .chat-bubble {
-  flex: 1;
-  z-index: 5;
-  background-color: #EEEEEE;
-  border-radius: 30px;
-  border-style: outset;
-  text-align: center;
-  position: absolute;
-  display: block;
-  font-family: Consolas, monaco, monospace;
-  font-size: 20px;
-  padding: 5px;
-  margin: 0 0 0 -25px;
-  animation-name: bubblefade;
-  animation-duration: 8s;
-  max-width: 150px;
-  min-width: 100px;
-  word-break: break-word;
+
+.chat-bubble {
+    flex: 1;
+    z-index: 5;
+    background-color: #EEEEEE;
+    border-radius: 30px;
+    border-style: outset;
+    text-align: center;
+    position: absolute;
+    display: block;
+    font-family: Consolas, monaco, monospace;
+    font-size: 20px;
+    padding: 5px;
+    margin: 0 0 0 -25px;
+    animation-name: bubblefade;
+    animation-duration: 8s;
+    max-width: 150px;
+    min-width: 100px;
+    word-break: break-word;
 }
- 
+
